src/objects/ETSDetail__c.object
<CustomObject>
    <fields>
        <fullName>LoginPage__c</fullName>
        <label>Login Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ETS Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ETS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ETS Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>